--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "maquette": "^3.5.3",
+    "uniqid": "^5.4.0",
     "vue": "^3.2.41"
   },
   "devDependencies": {
+    "@types/uniqid": "^5.3.2",
     "@vitejs/plugin-vue": "^3.2.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3",
+    "vite": "^3.1.8",
     "vue-tsc": "^1.0.9"
   }
 }
