--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "maquette": "^3.5.3",
-    "uniqid": "^5.4.0",
-    "vue": "^3.2.41"
+    "maquette": "^3.5.3"
   },
   "devDependencies": {
     "@types/uniqid": "^5.3.2",
     "@vitejs/plugin-vue": "^3.2.0",
+    "cypress": "^11.2.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.8",
+    "vue": "^3.2.41",
+    "vue-router": "^4.1.6",
     "vue-tsc": "^1.0.9"
   }
 }
