--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/uniqid": "^5.3.2",
     "@vitejs/plugin-vue": "^3.2.0",
     "cypress": "^11.2.0",
+    "sass": "^1.56.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.8",
     "vue": "^3.2.41",
