--- a/packages/hooks/use-auto-capitalize/package.json
+++ b/packages/hooks/use-auto-capitalize/package.json
@@ -1,26 +1,19 @@
 {
-  "name": "super-form",
-  "private": true,
+  "name": "@super-form/use-auto-capitalize",
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build && tsc --emitDeclarationOnly",
-    "preview": "vite preview"
-  },
+  "types": "dist/packages/core/src/index.d.ts",
   "dependencies": {
     "maquette": "^3.5.3"
   },
   "devDependencies": {
     "@types/uniqid": "^5.3.2",
     "@vitejs/plugin-vue": "^3.2.0",
-    "@vue/tsconfig": "^0.1.3",
     "cypress": "^11.2.0",
-    "dotenv": "^16.0.3",
     "lerna": "^6.1.0",
     "sass": "^1.56.1",
     "typescript": "^4.6.4",
-    "vite": "^3.2.5",
+    "vite": "^3.1.8",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6",
     "vue-tsc": "^1.0.9"
