--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,9 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
+  "npmClient": "npm",
   "version": "0.0.1",
   "packages": [
-    "packages/*",
-    "packages/hooks/*"
+    "packages/*"
   ]
 }
