--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@super-form/core",
-  "version": "0.0.2",
+  "version": "0.1.0-alpha.1",
   "type": "module",
   "types": "dist/packages/core/src/index.d.ts",
   "dependencies": {
