--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && tsc --emitDeclarationOnly",
+    "build": "vite build && lerna run build",
     "preview": "vite preview"
   },
   "dependencies": {
     "maquette": "^3.5.3"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^10.0.1",
     "@types/uniqid": "^5.3.2",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/tsconfig": "^0.1.3",
