--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,16 +7,10 @@
     "maquette": "^3.5.3"
   },
   "devDependencies": {
-    "@types/uniqid": "^5.3.2",
-    "@vitejs/plugin-vue": "^3.2.0",
-    "cypress": "^11.2.0",
     "lerna": "^6.1.0",
     "sass": "^1.56.1",
     "typescript": "^4.6.4",
-    "vite": "^3.1.8",
-    "vue": "^3.2.41",
-    "vue-router": "^4.1.6",
-    "vue-tsc": "^1.0.9"
+    "vite": "^3.1.8"
   },
   "workspaces": [
     "packages/*"
