--- a/packages/use-auto-capitalize/package.json
+++ b/packages/use-auto-capitalize/package.json
@@ -2,16 +2,16 @@
   "name": "@super-form/use-auto-capitalize",
   "version": "0.0.2",
   "type": "module",
-  "types": "dist/packages/core/src/index.d.ts",
-  "dependencies": {
-    "maquette": "^3.5.3"
+  "types": "../../dist/types/use-auto-capitalize/src/index.d.ts",
+  "module": "../../dist/use-auto-capitalize.js",
+  "main": "../../dist/use-auto-capitalize.cjs",
+  "scripts": {
+    "build": "tsc --emitDeclarationOnly"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
     "lerna": "^6.1.0",
     "typescript": "^4.6.4",
-    "vite": "^3.1.8",
-    "vue-tsc": "^1.0.9"
+    "vite": "^3.1.8"
   },
   "workspaces": [
     "packages/*"
