--- a/packages/use-required/package.json
+++ b/packages/use-required/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "@super-form/use-valid-zip",
-  "version": "0.1.0-alpha.0",
+  "name": "@super-form/use-required",
+  "version": "0.0.2",
   "type": "module",
-  "types": "../../dist/types/use-valid-zip/src/index.d.ts",
-  "module": "../../dist/use-valid-zip.js",
-  "main": "../../dist/use-valid-zip.cjs",
+  "types": "../../dist/types/use-required/src/index.d.ts",
+  "module": "../../dist/use-required.js",
+  "main": "../../dist/use-required.cjs",
   "scripts": {
     "build": "tsc --emitDeclarationOnly"
   },
+  "dependencies": {},
   "devDependencies": {
     "lerna": "^6.1.0",
     "typescript": "^4.6.4",
