--- a/packages/theme-material/package.json
+++ b/packages/theme-material/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@super-form/theme-material",
+  "name": "@phormal/theme-material",
   "version": "0.1.0-alpha.1",
   "type": "module",
   "scripts": {
