--- a/package.json
+++ b/package.json
@@ -5,20 +5,34 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && lerna run build",
+    "build": "rollup -c && lerna run build",
+    "clean:packages": "rm -rf ./packages/*/dist",
     "preview": "vite preview"
   },
   "dependencies": {
     "maquette": "^3.5.3"
   },
   "devDependencies": {
+    "@atomico/rollup-plugin-sizes": "^1.1.4",
+    "@lerna/batch-packages": "^3.16.0",
+    "@lerna/filter-packages": "^6.2.0",
+    "@lerna/project": "^6.2.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
     "@types/uniqid": "^5.3.2",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/tsconfig": "^0.1.3",
     "cypress": "^11.2.0",
     "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
     "lerna": "^6.1.0",
+    "minimist": "^1.2.7",
+    "path": "^0.12.7",
+    "rollup-plugin-auto-external": "^2.0.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
+    "rollup-plugin-typescript2": "^0.34.1",
     "sass": "^1.56.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.5",
