--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,7 +2,10 @@
   "name": "@phormal/core",
   "version": "0.1.0-alpha.1",
   "type": "module",
-  "types": "dist/packages/core/src/index.d.ts",
+  "module": "./dist/core.js",
+  "main": "./dist/core.cjs.js",
+  "umd": "./dist/core.umd.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "maquette": "^3.5.3"
   },
