--- a/packages/use-length/package.json
+++ b/packages/use-length/package.json
@@ -2,12 +2,10 @@
   "name": "@phormal/use-length",
   "version": "0.0.2",
   "type": "module",
-  "types": "../../dist/types/use-length/src/index.d.ts",
-  "module": "../../dist/use-length.js",
-  "main": "../../dist/use-length.cjs",
-  "scripts": {
-    "build": "tsc --emitDeclarationOnly"
-  },
+  "types": "./dist/use-length/src/index.d.ts",
+  "module": "./dist/use-length.js",
+  "main": "./dist/use-length.cjs.js",
+  "umd": "./dist/use-length.umd.js",
   "dependencies": {},
   "devDependencies": {
     "lerna": "^6.1.0",
