--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "rollup -c && lerna run build",
+    "lint": "npx eslint .",
+    "lint:fix": "npx eslint . --fix",
     "clean:packages": "rm -rf ./packages/*/dist",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "docs:dev": "cd docs && npm run dev"
   },
   "dependencies": {
     "maquette": "^3.5.3"
@@ -22,10 +25,13 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
     "@types/uniqid": "^5.3.2",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/tsconfig": "^0.1.3",
     "cypress": "^11.2.0",
     "dotenv": "^16.0.3",
+    "eslint": "^8.30.0",
     "fs": "^0.0.1-security",
     "lerna": "^6.1.0",
     "minimist": "^1.2.7",
