--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "rollup -c && lerna run build",
+    "test:e2e": "cypress open --e2e --config-file config/cypress.config.ts",
     "lint:ts": "npx eslint -c config/.eslintrc.cjs .",
     "lint:ts:fix": "npx eslint -c config/.eslintrc.cjs . --fix",
     "lint:styles": "npx stylelint --config config/.stylelintrc.json \"**/*.scss\"",
