--- a/packages/use-required/package.json
+++ b/packages/use-required/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@phormal/use-required",
-  "version": "0.0.2",
+  "version": "0.1.0-alpha.2",
   "type": "module",
   "types": "./dist/use-required/src/index.d.ts",
   "module": "./dist/use-required.js",
   "main": "./dist/use-required.cjs.js",
   "umd": "./dist/use-required.umd.js",
-  "dependencies": {},
   "devDependencies": {
     "lerna": "^6.1.0",
     "typescript": "^4.6.4",
