--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@phormal/core",
   "version": "0.1.0-alpha.2",
+  "license": "MIT",
   "type": "module",
   "module": "./dist/core.js",
   "main": "./dist/core.cjs.js",
   "umd": "./dist/core.umd.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "src"
+  ],
   "dependencies": {
     "maquette": "^3.5.3"
   },
