--- a/packages/theme-basic/package.json
+++ b/packages/theme-basic/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@phormal/theme-basic",
   "version": "0.1.0-alpha.2",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "build": "sass ./src/index.scss ./dist/index.css"
@@ -11,6 +12,10 @@
       "require": "./dist/style.css"
     }
   },
+  "files": [
+    "dist",
+    "src"
+  ],
   "devDependencies": {
     "lerna": "^6.1.0",
     "sass": "^1.56.1",
