--- a/packages/use-required/package.json
+++ b/packages/use-required/package.json
@@ -1,11 +1,16 @@
 {
   "name": "@phormal/use-required",
   "version": "0.1.0-alpha.2",
+  "license": "MIT",
   "type": "module",
   "types": "./dist/use-required/src/index.d.ts",
   "module": "./dist/use-required.js",
   "main": "./dist/use-required.cjs.js",
   "umd": "./dist/use-required.umd.js",
+  "files": [
+    "dist",
+    "src"
+  ],
   "devDependencies": {
     "lerna": "^6.1.0",
     "typescript": "^4.6.4",
