--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean:packages": "rm -rf ./packages/*/dist",
     "docs:dev": "cd docs && npm run dev",
     "release": "npm run clean:packages && npm run build && lerna publish",
-    "release:pre": "npm run clean:packages && npm run build && lerna publish"
+    "release:pre": "npm run clean:packages && npm run build && lerna publish --conventional-commits --conventional-prerelease"
   },
   "dependencies": {
     "maquette": "^3.5.3"
