--- a/docs/package.json
+++ b/docs/package.json
@@ -12,9 +12,11 @@
   "license": "MIT",
   "dependencies": {
     "@next/font": "^13.1.0",
-    "@phormal/core": "^0.1.0-alpha.3",
-    "@phormal/theme-basic": "^0.1.0-alpha.3",
-    "@phormal/use-email": "^0.1.0-alpha.3",
+    "@phormal/core": "^0.1.0-alpha.4",
+    "@phormal/theme-basic": "^0.1.0-alpha.4",
+    "@phormal/use-email": "^0.1.0-alpha.4",
+    "@phormal/use-length": "^0.1.0-alpha.4",
+    "@phormal/use-required": "^0.1.0-alpha.4",
     "next": "^13.0.7",
     "nextra": "^2.0.1",
     "nextra-theme-docs": "^2.0.1",
