--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "clean:packages": "rm -rf ./packages/*/dist",
     "docs:dev": "cd docs && npm run dev",
     "release": "npm run clean:packages && npm run build && lerna publish",
-    "release:pre": "npm run clean:packages && npm run build && lerna publish --conventional-commits --conventional-prerelease"
+    "release:pre": "npm run clean:packages && npm run build && lerna publish --conventional-commits --conventional-prerelease",
+    "prepare": "husky install"
   },
   "dependencies": {
     "maquette": "^3.5.3"
   },
   "devDependencies": {
     "@atomico/rollup-plugin-sizes": "^1.1.4",
+    "@commitlint/config-conventional": "^17.3.0",
     "@lerna/batch-packages": "^3.16.0",
     "@lerna/filter-packages": "^6.2.0",
     "@lerna/project": "^6.2.0",
@@ -33,10 +35,12 @@
     "@typescript-eslint/parser": "^5.47.1",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/tsconfig": "^0.1.3",
+    "commitlint": "^17.3.0",
     "cypress": "^11.2.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.30.0",
     "fs": "^0.0.1-security",
+    "husky": "^8.0.2",
     "lerna": "^6.1.0",
     "minimist": "^1.2.7",
     "path": "^0.12.7",
