build: add config files to all jobs for cypress action

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -28,6 +28,8 @@ jobs:
       - uses: cypress-io/github-action@v5
         with:
           browser: firefox
+          start: npm run dev
+          config-file: config/cypress.config.ts
   tests:
     runs-on: windows-latest
     steps:
@@ -35,3 +37,5 @@ jobs:
       - uses: cypress-io/github-action@v5
         with:
           browser: edge
+          start: npm run dev
+          config-file: config/cypress.config.ts
