--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -30,7 +30,7 @@ jobs:
           browser: firefox
           start: npm run dev
           config-file: config/cypress.config.ts
-  tests:
+  edge:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
