--- a/packages/component-vue3/package.json
+++ b/packages/component-vue3/package.json
@@ -16,5 +16,11 @@
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "gitHead": "20d6849b622722d79a094d105f858f515eb58212",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tomosterlund/phormal",
+    "directory": "packages/component-vue3"
+  }
 }
