--- a/packages/theme-material/package.json
+++ b/packages/theme-material/package.json
@@ -22,5 +22,11 @@
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "gitHead": "20d6849b622722d79a094d105f858f515eb58212",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tomosterlund/phormal",
+    "directory": "packages/theme-material"
+  }
 }
