--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -2,6 +2,11 @@
   "name": "@phormal/core",
   "version": "0.1.0-alpha.8",
   "license": "MIT",
+  "author": {
+    "name": "Tom Österlund",
+    "email": "tom@oesterlund.de",
+    "url": "https://github.com/tomosterlund"
+  },
   "module": "./dist/core.js",
   "main": "./dist/core.cjs.js",
   "umd": "./dist/core.umd.js",
@@ -27,5 +32,6 @@
     "type": "git",
     "url": "https://github.com/tomosterlund/phormal",
     "directory": "packages/core"
-  }
+  },
+  "homepage": "https://phormal.vercel.app"
 }
