--- a/packages/theme-material/package.json
+++ b/packages/theme-material/package.json
@@ -34,5 +34,6 @@
     "url": "https://github.com/tomosterlund/phormal",
     "directory": "packages/theme-material"
   },
-  "homepage": "https://phormal.vercel.app"
+  "homepage": "https://phormal.vercel.app",
+  "keywords": ["form-generator", "form-validation", "form-themes", "vue3"]
 }
