--- a/packages/use-auto-capitalize/package.json
+++ b/packages/use-auto-capitalize/package.json
@@ -31,5 +31,6 @@
     "url": "https://github.com/tomosterlund/phormal",
     "directory": "packages/use-auto-capitalize"
   },
-  "homepage": "https://phormal.vercel.app"
+  "homepage": "https://phormal.vercel.app",
+  "keywords": ["form-generator", "form-validation", "form-themes", "vue3"]
 }
