--- a/packages/component-vue3/package.json
+++ b/packages/component-vue3/package.json
@@ -28,5 +28,6 @@
     "url": "https://github.com/tomosterlund/phormal",
     "directory": "packages/component-vue3"
   },
-  "homepage": "https://phormal.vercel.app"
+  "homepage": "https://phormal.vercel.app",
+  "keywords": ["form-generator", "form-validation", "form-themes", "vue3"]
 }
