--- a/packages/use-email/package.json
+++ b/packages/use-email/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@phormal/use-email",
-  "version": "0.1.0-alpha.8",
+  "version": "0.1.0-alpha.9",
   "license": "MIT",
   "author": {
     "name": "Tom Österlund",
@@ -29,5 +29,10 @@
     "directory": "packages/use-email"
   },
   "homepage": "https://phormal.vercel.app",
-  "keywords": ["form-generator", "form-validation", "form-themes", "vue3"]
+  "keywords": [
+    "form-generator",
+    "form-validation",
+    "form-themes",
+    "vue3"
+  ]
 }
