--- a/packages/theme-material/package.json
+++ b/packages/theme-material/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@phormal/theme-material",
-  "version": "0.1.0-alpha.8",
+  "version": "0.1.0-alpha.9",
   "license": "MIT",
   "author": {
     "name": "Tom Österlund",
@@ -35,5 +35,10 @@
     "directory": "packages/theme-material"
   },
   "homepage": "https://phormal.vercel.app",
-  "keywords": ["form-generator", "form-validation", "form-themes", "vue3"]
+  "keywords": [
+    "form-generator",
+    "form-validation",
+    "form-themes",
+    "vue3"
+  ]
 }
