feat: create vue 3 component (#6)
* feat(component-vue3): create vue3 component

* test(component-vue3): add tests for validating data in vue3 component

* v0.1.0-alpha.7

* chore: add repository to all package.json files

* v0.1.0-alpha.8

* chore: add homepage and author to all package.json files

* chore: add keywords to all package.json files

* v0.1.0-alpha.9

* docs: add documentation for data validation

* docs: add documentation for vue integration

* v0.1.0-alpha.10

--- a/packages/component-vue3/package.json
+++ b/packages/component-vue3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@phormal/theme-material",
+  "name": "@phormal/component-vue3",
   "version": "0.1.0-alpha.10",
   "license": "MIT",
   "author": {
@@ -7,23 +7,17 @@
     "email": "tom@oesterlund.de",
     "url": "https://github.com/tomosterlund"
   },
-  "scripts": {
-    "build": "sass ./src/index.scss ./dist/index.css"
-  },
-  "exports": {
-    "./dist/index.css": {
-      "import": "./dist/style.css",
-      "require": "./dist/style.css"
-    }
-  },
+  "types": "./dist/component-vue3/src/index.d.ts",
+  "module": "./dist/component-vue3.js",
+  "main": "./dist/component-vue3.cjs.js",
+  "umd": "./dist/component-vue3.umd.js",
   "files": [
     "dist",
     "src"
   ],
-  "devDependencies": {
-    "lerna": "^6.1.0",
-    "sass": "^1.56.1",
-    "vite": "^3.1.8"
+  "peerDependencies": {
+    "@phormal/core": "^0.1.0-alpha.1",
+    "vue": "^3.0.0"
   },
   "workspaces": [
     "packages/*"
@@ -32,7 +26,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/tomosterlund/phormal",
-    "directory": "packages/theme-material"
+    "directory": "packages/component-vue3"
   },
   "homepage": "https://phormal.vercel.app",
   "keywords": [
