--- a/packages/theme-basic/package.json
+++ b/packages/theme-basic/package.json
@@ -31,7 +31,7 @@
   "gitHead": "20d6849b622722d79a094d105f858f515eb58212",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tomosterlund/phormal",
+    "url": "https://github.com/phormal/phormal",
     "directory": "packages/theme-basic"
   },
   "homepage": "https://phormal.vercel.app",
