--- a/packages/use-length/package.json
+++ b/packages/use-length/package.json
@@ -25,7 +25,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/tomosterlund/phormal",
+    "url": "https://github.com/phormal/phormal",
     "directory": "packages/use-length"
   },
   "homepage": "https://phormal.vercel.app",
