feat(theme-material): add styles for disabled material text field

--- a/packages/use-auto-capitalize/package.json
+++ b/packages/use-auto-capitalize/package.json
@@ -31,7 +31,7 @@
     "url": "https://github.com/phormal/phormal",
     "directory": "packages/use-auto-capitalize"
   },
-  "homepage": "https://phormal.vercel.app",
+  "homepage": "https://phormal.dev/",
   "keywords": [
     "form-generator",
     "form-validation",
