--- a/packages/component-vue3/package.json
+++ b/packages/component-vue3/package.json
@@ -28,7 +28,7 @@
     "url": "https://github.com/phormal/phormal",
     "directory": "packages/component-vue3"
   },
-  "homepage": "https://phormal.vercel.app",
+  "homepage": "https://phormal.dev/",
   "keywords": [
     "form-generator",
     "form-validation",
