--- a/packages/theme-basic/package.json
+++ b/packages/theme-basic/package.json
@@ -34,7 +34,7 @@
     "url": "https://github.com/phormal/phormal",
     "directory": "packages/theme-basic"
   },
-  "homepage": "https://phormal.vercel.app",
+  "homepage": "https://phormal.dev/",
   "keywords": [
     "form-generator",
     "form-validation",
