test: add tests for mobile view and for custom errors

--- a/common/package.tsconfig.json
+++ b/common/package.tsconfig.json
@@ -14,5 +14,6 @@
     "noEmit": false,
     "declaration": true,
     "types": ["vite/client"]
-  }
+  },
+  "exclude": ["node_modules", "dist", "tests"]
 }
