--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,3 +1,10 @@
+name: Code Coverage
+on:
+  pull_request:
+  push:
+    branches:
+      - master
+
 steps:
   - uses: actions/checkout@master
   - uses: codecov/codecov-action@v3
