test: add codecov workflow

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -5,11 +5,13 @@ on:
     branches:
       - master
 
-steps:
-  - uses: actions/checkout@master
-  - uses: codecov/codecov-action@v3
-    with:
-      directory: ./coverage
-      flags: e2e
-      fail_ci_if_error: true
-      verbose: true
+jobs:
+  coverage:
+    steps:
+      - uses: actions/checkout@master
+      - uses: codecov/codecov-action@v3
+        with:
+          directory: ./coverage
+          flags: e2e
+          fail_ci_if_error: true
+          verbose: true
