--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   coverage:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
       - uses: codecov/codecov-action@v3
