--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: codecov/codecov-action@v3
         with:
-          directory: ./coverage
+          files: ./lcov.info
           flags: e2e
           fail_ci_if_error: true
           verbose: true
