test: add coveralls to workflow

--- a/.github/workflows/end-to-end-tests.yml
+++ b/.github/workflows/end-to-end-tests.yml
@@ -19,13 +19,7 @@ jobs:
           start: npm run dev
           command: npm run test:coverage
 
-  # 2.
-  finish:
-    needs: chrome
-    runs-on: ubuntu-latest
-    steps:
-      - name: Coveralls Finished
+      - name: Coveralls
         uses: coverallsapp/github-action@master
         with:
-          github-token: ${{ secrets.github_token }}
-          parallel-finished: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
