--- a/package.json
+++ b/package.json
@@ -64,5 +64,9 @@
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "nyc": {
+    "include": ["packages/*/src/**/*.ts"],
+    "exclude": ["development/**"]
+  }
 }
