--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
     "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/uniqid": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
+    "@vitejs/plugin-react": "^2.2.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/tsconfig": "^0.1.3",
     "commitlint": "^17.3.0",
@@ -50,6 +53,8 @@
     "lerna": "^6.1.0",
     "minimist": "^1.2.7",
     "path": "^0.12.7",
+    "react": "^16.0.0",
+    "react-dom": "^16.8.0",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-typescript2": "^0.34.1",
