--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,7 +33,7 @@
     "url": "https://github.com/phormal/phormal",
     "directory": "packages/core"
   },
-  "homepage": "https://phormal.dev/",
+  "homepage": "https://phormal.dev",
   "keywords": [
     "form-generator",
     "form-validation",
