--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../common/package.tsconfig.json",
   "compilerOptions": {
-    "outDir": "../../dist/types"
+    "outDir": "../../dist/types",
+    "jsx": "react"
   },
-  "include": ["./src/**/*.ts"]
+  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
 }
