feat(react): add package for framework integration (#18)
* feat: start building react integration

* feat(react): add package for framework integration

* chore: comment pre-commit hook back in

* chore(react): align devDependencies

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite --config config/vite.config.ts",
-    "build": "rollup -c && lerna run build",
+    "build": "npm run clean:packages && rollup -c && lerna run build",
     "test:e2e": "cypress open --e2e",
     "test:e2e:ci": "cypress run --e2e",
     "test:coverage": "npm run instrument && npm run test:e2e:ci && nyc report",
@@ -16,9 +16,9 @@
     "clean:packages": "rm -rf ./packages/*/dist",
     "docs:dev": "cd docs && npm run dev",
     "instrument": "npx nyc instrument packages instrumented",
-    "release": "npm run clean:packages && npm run build && lerna publish --no-commit-hooks",
-    "release:pre": "npm run clean:packages && npm run build && lerna publish --no-commit-hooks --conventional-commits --conventional-prerelease",
-    "release:bump:pre": "npm run clean:packages && npm run build && lerna publish --no-commit-hooks --conventional-commits --conventional-bump-prerelease",
+    "release": "npm run build && lerna publish --no-commit-hooks",
+    "release:pre": "npm run build && lerna publish --no-commit-hooks --conventional-commits --conventional-prerelease",
+    "release:bump:pre": "npm run build && lerna publish --no-commit-hooks --conventional-commits --conventional-bump-prerelease",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -36,9 +36,12 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
     "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/uniqid": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
+    "@vitejs/plugin-react": "^2.2.0",
     "@vitejs/plugin-vue": "^3.2.0",
     "@vue/tsconfig": "^0.1.3",
     "commitlint": "^17.3.0",
@@ -50,6 +53,8 @@
     "lerna": "^6.1.0",
     "minimist": "^1.2.7",
     "path": "^0.12.7",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-typescript2": "^0.34.1",
