--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -17,8 +17,8 @@
   ],
   "peerDependencies": {
     "@phormal/core": "^0.1.0-alpha.16",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "workspaces": [
     "packages/*"
