--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,9 @@ updates:
     schedule:
       interval: monthly
     open-pull-requests-limit: 10
+    ignore:
+      - dependency-name: "vue"
+      - dependency-name: "vue-router"
+      - dependency-name: "vue-tsc"
+      - dependency-name: "react"
+      - dependency-name: "react-dom"
