chore: bump pre-release versions

--- a/packages/theme-basic/package.json
+++ b/packages/theme-basic/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@phormal/theme-basic",
-  "version": "0.1.0-alpha.21",
+  "version": "0.1.0-beta",
   "license": "MIT",
   "author": {
     "name": "Tom Österlund",
