--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@phormal/core",
-  "version": "0.1.0-alpha.21",
+  "version": "0.1.0-beta",
   "license": "MIT",
   "author": {
     "name": "Tom Österlund",
