--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
   "npmClient": "npm",
-  "version": "0.1.0-alpha.21",
+  "version": "0.1.0-beta.0",
   "packages": [
     "packages/*"
   ]
