--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@phormal/react",
-  "version": "0.1.0-beta",
+  "version": "0.1.0-beta.0",
   "license": "MIT",
   "author": {
     "name": "Tom Österlund",
